--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <div class="da-slide">
       <h2><i>CLEAN &amp; FRESH</i> <br /> <i>FULLY RESPONSIVE</i> <br /> <i>DESIGN</i></h2>
       <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i> <br /> <i>veniam omnis </i></p>
-      <div class="da-img"><img src="assets/1.png" alt="" /></div>
+      <div class="da-img"><%= image_tag "1.png" %></div>
     </div>
     <div class="da-slide">
       <h2><i>RESPONSIVE VIDEO</i> <br /> <i>SUPPORT AND</i> <br /> <i>MANY MORE</i></h2>
@@ -16,7 +16,7 @@
     <div class="da-slide">
       <h2><i>USING BEST WEB</i> <br /> <i>SOLUTIONS WITH</i> <br /> <i>HTML5/CSS3</i></h2>
       <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i> <br /> <i>veniam omnis </i></p>
-      <div class="da-img"><img src="assets/html5andcss3.png" alt="image01" /></div>
+      <div class="da-img"><%= image_tag "html5andcss3.png"</div>
     </div>
     <div class="da-arrows">
       <span class="da-arrows-prev"></span>
