--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -45,7 +45,7 @@
 	padding: 30px 0;
 	margin-bottom: 30px;
 	box-shadow: inset 0 0 4px #eee;
-	background: url(breadcrumbs.png) repeat;
+	background: image-url("breadcrumbs.png") repeat;
 }
 .purchase p {
 	margin-bottom: 0;
@@ -559,7 +559,7 @@ a.thumbnail {
 .breadcrumbs {
 	padding: 10px 0 6px;
 	box-shadow: inset 0 0 4px #eee;
-	background: url(breadcrumbs.png) repeat;
+	background: image-url("breadcrumbs.png") repeat;
 }
 .breadcrumbs h1 {
 	color: #686868;
