Fixing some text.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,7 @@
 <!--=== Content Part ===-->
 <div class="container"> 
   <!-- Recent Works -->
-  <div class="headline"><h2>Recent Works</h2></div>
+  <div class="headline"><h2>Recent News</h2></div>
   <div class="row">
     <div class="col-md-4 col-sm-6">
       <div class="thumbnails thumbnail-style thumbnail-kenburn">
@@ -94,7 +94,7 @@
 
   <!-- Our Clients -->
   <div id="clients-flexslider" class="flexslider home clients">
-    <div class="headline"><h2>Our Clients</h2></div>  
+    <div class="headline"><h2>Institutions</h2></div>  
   <ul class="slides">
     <li>
         <a href="#">
