--- a/app/views/home/institutions.html.erb
+++ b/app/views/home/institutions.html.erb
@@ -17,14 +17,14 @@
       <div class ="headline">
         <h2>Participating Institutions</h2>
       </div>
-      <ul>
-        <li>UNIVERSIDAD TECNICA FEDERICO SANTA MARIA (Primary Beneficiary) www.utfsm.cl</li>
-        <li>UNIVERSIDAD DE CHILE (Associated Beneficiary) www.uchile.cl</li>
-        <li>PONTIFICIA UNIVERSIDAD CATOLICA DE CHILE - PUC (Associated Beneficiary) www.uc.cl</li>
-        <li>UNIVERSIDAD DE CONCEPCION (Associated Beneficiary) www.udec.cl</li>
-        <li>UNIVERSIDAD DE SANTIAGO DE CHILE (Associated Beneficiary) www.usach.cl</li>
-        <li>ALMA (Foreign Company) www.almaobservatory.org</li>
-        <li>CONSORCIO RED UNIVERSITARIA NACIONAL REUNA (National Company) www.reuna.cl</li>
+      <ul class="list-unstyled">
+        <li><%= fa_icon "book" %> UNIVERSIDAD TECNICA FEDERICO SANTA MARIA</li>
+        <li><%= fa_icon "book" %> UNIVERSIDAD DE CHILE</li>
+        <li><%= fa_icon "book" %> PONTIFICIA UNIVERSIDAD CATOLICA DE CHILE</li>
+        <li><%= fa_icon "book" %> UNIVERSIDAD DE CONCEPCION</li>
+        <li><%= fa_icon "book" %> UNIVERSIDAD DE SANTIAGO DE CHILE</li>
+        <li><%= fa_icon "book" %> ALMA</li>
+        <li><%= fa_icon "book" %> CONSORCIO RED UNIVERSITARIA NACIONAL REUNA</li>
       </ul>
     </div>
 
