--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,12 @@
 <!--=== Slider ===-->
 <div class="slider-inner">
-  <div id="da-slider" class="da-slider">
-    <div class="da-slide">
-      <h2><i>CLEAN &amp; FRESH</i> <br /> <i>FULLY RESPONSIVE</i> <br /> <i>DESIGN</i></h2>
-      <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i> <br /> <i>veniam omnis </i></p>
-      <div class="da-img"><%= image_tag "1.png" %></div>
-    </div>
+  <div id="da-slider" class="da-slider">    
     <div class="da-slide">
       <h2><i>RESPONSIVE VIDEO</i> <br /> <i>SUPPORT AND</i> <br /> <i>MANY MORE</i></h2>
       <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i></p>
       <div class="da-img">
-    <iframe src="http://player.vimeo.com/video/47911018" width="530" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
+        <iframe src="http://player.vimeo.com/video/76644462" width="530" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
       </div>
-    </div>
-    <div class="da-slide">
-      <h2><i>USING BEST WEB</i> <br /> <i>SOLUTIONS WITH</i> <br /> <i>HTML5/CSS3</i></h2>
-      <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i> <br /> <i>veniam omnis </i></p>
-      <div class="da-img"><%= image_tag "html5andcss3.png" %></div>
     </div>
     <div class="da-arrows">
       <span class="da-arrows-prev"></span>
@@ -31,11 +21,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <span>Unify is a clean and fully responsive incredible Template.</span>
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi  vehicula sem ut volutpat. Ut non libero magna fusce condimentum eleifend enim a feugiat.</p>
-      </div>      
-      <div class="col-md-3">
-        <a href="#" class="btn-buy hover-effect">Purchase Now</a>      
+        <span>What is CHIVO?</span>
+        <p>The Chilean Virtual Observatory (CHIVO) is the VO developed in Chile and it is one of many VO projects currently underway in the world. It born from the need to archive data that require large storage capacities and the need to develop new tools for the analyzing large volumes of data and better algorithms for intelligent processing astronomical data, this due to the volumes of large scale data that will generate the astronomical observatories in Chile, mainly the ALMA project that will generate over 1TB of data per day, and in this form be to able to store the data in the local territory to optimize the observation time of the chilean astronomers.</p>
       </div>
     </div>
   </div>
@@ -97,107 +84,59 @@
     <div class="headline"><h2>Institutions</h2></div>  
   <ul class="slides">
     <li>
-        <a href="#">
-          <img src="assets/img/clients/hp_grey.png" alt="" /> 
-          <img src="assets/img/clients/hp.png" class="color-img" alt="" />
-        </a>
-      </li>
+      <a href="#">
+        <%= image_tag "institutions/fondef_gray.png" %>
+        <%= image_tag "institutions/fondef.png", class: 'color-img' %>
+      </a>
+    </li>
     <li>
-        <a href="#">
-          <img src="assets/img/clients/igneus_grey.png" alt="" /> 
-          <img src="assets/img/clients/igneus.png" class="color-img" alt="" />
-        </a>
-      </li>
+      <a href="#">
+        <%= image_tag "institutions/conicyt_gray.png" %>
+        <%= image_tag "institutions/conicyt.png", class: 'color-img' %>
+      </a>
+    </li>
     <li>
-        <a href="#">
-          <img src="assets/img/clients/vadafone_grey.png" alt="" /> 
-          <img src="assets/img/clients/vadafone.png" class="color-img" alt="" />
-        </a>
-      </li>
+      <a href="#">
+        <%= image_tag "institutions/reuna_gray.png" %>
+        <%= image_tag "institutions/reuna.png", class: 'color-img' %>
+      </a>
+    </li>
     <li>
-        <a href="#">
-          <img src="assets/img/clients/walmart_grey.png" alt="" /> 
-          <img src="assets/img/clients/walmart.png" class="color-img" alt="" />
-        </a>
-      </li>
+      <a href="#">
+        <%= image_tag "institutions/utfsm_gray.png" %>
+        <%= image_tag "institutions/utfsm.png", class: 'color-img' %>
+      </a>
+    </li>
     <li>
-        <a href="#">
-          <img src="assets/img/clients/shell_grey.png" alt="" /> 
-          <img src="assets/img/clients/shell.png" class="color-img" alt="" />
-        </a>
-      </li>
+      <a href="#">
+        <%= image_tag "institutions/uchile_gray.png" %>
+        <%= image_tag "institutions/uchile.png", class: 'color-img' %>
+      </a>
+    </li>
     <li>
-        <a href="#">
-          <img src="assets/img/clients/natural_grey.png" alt="" /> 
-          <img src="assets/img/clients/natural.png" class="color-img" alt="" />
-        </a>
-      </li>
+      <a href="#">
+        <%= image_tag "institutions/puc_gray.png" %>
+        <%= image_tag "institutions/puc.png", class: 'color-img' %>
+      </a>
+    </li>
     <li>
-        <a href="#">
-          <img src="assets/img/clients/aztec_grey.png" alt="" /> 
-          <img src="assets/img/clients/aztec.png" class="color-img" alt="" />
-        </a>
-      </li>
+      <a href="#">
+        <%= image_tag "institutions/udec_gray.png" %>
+        <%= image_tag "institutions/udec.png", class: 'color-img' %>
+      </a>
+    </li>
     <li>
-        <a href="#">
-          <img src="assets/img/clients/gamescast_grey.png" alt="" /> 
-          <img src="assets/img/clients/gamescast.png" class="color-img" alt="" />
-        </a>
-      </li>
+      <a href="#">
+        <%= image_tag "institutions/usach_gray.png" %>
+        <%= image_tag "institutions/usach.png", class: 'color-img' %>
+      </a>
+    </li>
     <li>
-        <a href="#">
-          <img src="assets/img/clients/cisco_grey.png" alt="" /> 
-          <img src="assets/img/clients/cisco.png" class="color-img" alt="" />
-        </a>
-      </li>
-    <li>
-        <a href="#">
-          <img src="assets/img/clients/everyday_grey.png" alt="" /> 
-          <img src="assets/img/clients/everyday.png" class="color-img" alt="" />
-        </a>
-      </li>
-    <li>
-        <a href="#">
-          <img src="assets/img/clients/cocacola_grey.png" alt="" /> 
-          <img src="assets/img/clients/cocacola.png" class="color-img" alt="" />
-        </a>
-      </li>
-    <li>
-        <a href="#">
-          <img src="assets/img/clients/spinworkx_grey.png" alt="" /> 
-          <img src="assets/img/clients/spinworkx.png" class="color-img" alt="" />
-        </a>
-      </li>
-    <li>
-        <a href="#">
-          <img src="assets/img/clients/shell_grey.png" alt="" /> 
-          <img src="assets/img/clients/shell.png" class="color-img" alt="" />
-        </a>
-      </li>
-    <li>
-        <a href="#">
-          <img src="assets/img/clients/natural_grey.png" alt="" /> 
-          <img src="assets/img/clients/natural.png" class="color-img" alt="" />
-        </a>
-      </li>
-    <li>
-        <a href="#">
-          <img src="assets/img/clients/gamescast_grey.png" alt="" /> 
-          <img src="assets/img/clients/gamescast.png" class="color-img" alt="" />
-        </a>
-      </li>
-    <li>
-        <a href="#">
-          <img src="assets/img/clients/everyday_grey.png" alt="" /> 
-          <img src="assets/img/clients/everyday.png" class="color-img" alt="" />
-        </a>
-      </li>
-    <li>
-        <a href="#">
-          <img src="assets/img/clients/spinworkx_grey.png" alt="" /> 
-          <img src="assets/img/clients/spinworkx.png" class="color-img" alt="" />
-        </a>
-      </li>
+      <a href="#">
+        <%= image_tag "institutions/alma_gray.png" %>
+        <%= image_tag "institutions/alma.png", class: 'color-img' %>
+      </a>
+    </li>
   </ul>
   </div><!--/flexslider-->
   <!-- End Our Clients -->
