--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-  <title>Unify | Welcome...</title>
+  <title>ChiVO</title>
 
   <!-- Meta -->
   <meta charset="utf-8">
@@ -54,7 +54,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to image_tag("logo1-default.png"), root_path, class: 'navbar-brand' %>
+        <%= link_to image_tag("logo1-default.png", width: '130px'), root_path, class: 'navbar-brand' %>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -83,13 +83,13 @@
   <div class="row">
     <div class="col-md-6">      
         <p class="copyright-space">
-          2013 &copy; Unify. ALL Rights Reserved. 
-          <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
+          2013 &copy; ChiVO. ALL Rights Reserved. 
+          <!-- <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a> -->
         </p>
     </div>
     <div class="col-md-6">  
     <a href="index.html">
-      <img id="logo-footer" src="assets/logo2-default.png" class="pull-right" alt="" />
+      <%#= image_tag "logo1-default.png", class: 'pull-right', width: '110px' %>
     </a>
     </div>
   </div><!--/row-->
