Fixing header-blue file name.

--- a/app/assets/stylesheets/blue.css.scss
+++ b/app/assets/stylesheets/blue.css.scss
@@ -20,7 +20,7 @@ a.read-more:hover {
 ------------------------------------*/
 /*Main Parallax Sldier*/
 .da-slide h2 i {
-	background:url("bg-heading-blue.png") repeat;
+	background: image-url("bg-heading-blue.png") repeat;
 }
 
 /*Sequence Parallax Sldier*/
