--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,41 +38,13 @@
       <div class="thumbnails thumbnail-style thumbnail-kenburn">
         <div class="thumbnail-img">
           <div class="overflow-hidden">
-            <img class="img-responsive" src="assets/2.jpg" alt="" />
+            <%= image_tag "news_1.jpg", class: 'img-responsive' %>
           </div>
           <a class="btn-more hover-effect" href="#">read more +</a>     
         </div>
         <div class="caption">
-          <h3><a class="hover-effect" href="#">Project One</a></h3>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 col-sm-6">
-      <div class="thumbnails thumbnail-style thumbnail-kenburn">
-        <div class="thumbnail-img">
-          <div class="overflow-hidden">
-            <img class="img-responsive" src="assets/3.jpg" alt="" />
-          </div>
-          <a class="btn-more hover-effect" href="#">read more +</a>           
-        </div>
-        <div class="caption">
-          <h3><a class="hover-effect" href="#">Project Two</a></h3>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 col-sm-6">
-      <div class="thumbnails thumbnail-style thumbnail-kenburn">
-        <div class="thumbnail-img">
-          <div class="overflow-hidden">
-            <img class="img-responsive" src="assets/9.jpg" alt="" />
-          </div>
-          <a class="btn-more hover-effect" href="#">read more +</a>           
-        </div>
-        <div class="caption">
-          <h3><a class="hover-effect" href="#">Project Three</a></h3>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+          <h3><a class="hover-effect" href="#">Chilean Development of Astronomical Computing for ALMA</a></h3>
+          <p>Once the Atacama Large Millimiter/submillimeter Array (ALMA) is functioning at full capacity, it will generate more than 750 GB of data each day (on the order of 250 TB/year). Chilean astronomers will need to be able to connect at a high data transmission speed...</p>
         </div>
       </div>
     </div>
