--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,8 @@
 <div class="slider-inner">
   <div id="da-slider" class="da-slider">    
     <div class="da-slide">
-      <h2><i>RESPONSIVE VIDEO</i> <br /> <i>SUPPORT AND</i> <br /> <i>MANY MORE</i></h2>
-      <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i></p>
+      <h2><i>UTFSM</i><br /><i>Astroinformatic</i></h2>
+      <!-- <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i></p> -->
       <div class="da-img">
         <iframe src="http://player.vimeo.com/video/76644462" width="530" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
       </div>
