--- a/app/assets/stylesheets/query.css.scss
+++ b/app/assets/stylesheets/query.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the query controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.form-control.form-control-small{
+	width: 35%;
+}
+
+.form-control.form-control-medium{
+	width: 70%;
+}
+
+.form-control.form-control-large{
+	width: 100%;
+}
+
+
+
