--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,7 +78,7 @@
   </div>  
 </div><!--/header-->
 <!--=== End Header ===-->  
-<div class="container">
+<div id="main-container" class="container">
 		<%= yield %>
 </div>
 
