Adding bootstrap styles and VOView for every search form.

--- a/app/assets/stylesheets/voview.css.scss
+++ b/app/assets/stylesheets/voview.css.scss
@@ -1,6 +1,6 @@
 /*	font-family: Geneva, Arial, Helvetica, sans-serif; */
 body {
-	font-size: 100%;
+	// font-size: 100%;
 	color: #000;
 	background-color: #fff;
 	margin-top: 10px;
