--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,24 @@
             <%= link_to 'Institutions', institutions_path %>
           </li>
           <li class="dropdown <%= 'active' if controller.controller_name == 'query' and controller.action_name == 'index' %>">
-            <%= link_to 'Services', query_path %>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">
+              Services
+              <%= fa_icon 'angle-down' %>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to 'Cone Search', query_conesearch_path %>
+              </li>
+              <li>
+                <%= link_to 'Image Search', query_imagesearch_path %>
+              </li>
+              <li>
+                <%= link_to 'Spectral Search', query_spectralsearch_path %>
+              </li>
+              <li>
+                <%= link_to 'Table Search', query_tablesearch_path %>
+              </li>
+            </ul>
           </li>
           <li class="dropdown <%= 'active' if controller.controller_name == 'home' and controller.action_name == 'about' %>">
             <%= link_to 'About Us', about_path %>
@@ -78,9 +95,7 @@
   </div>  
 </div><!--/header-->
 <!--=== End Header ===-->  
-<div id="main-container" class="container">
-		<%= yield %>
-</div>
+<%= yield %>
 
 <!--=== Copyright ===-->
 <div class="copyright">
