--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,12 +39,27 @@
       <div class="thumbnails thumbnail-style thumbnail-kenburn">
         <div class="thumbnail-img">
           <div class="overflow-hidden">
-            <%= image_tag "news_1.jpg", class: 'img-responsive' %>
+            <%= image_tag "news_2.jpg", class: 'img-responsive' %>
           </div>
-          <a class="btn-more hover-effect" href="#">read more +</a>     
+          <a class="btn-more hover-effect" href="http://almaobservatory.org/en/press-room/announcements-events/658-chilean-astroinformatics-platform-joins-international-virtual-observatory">read more +</a>     
         </div>
         <div class="caption">
-          <h3><a class="hover-effect" href="#">Chilean Development of Astronomical Computing for ALMA</a></h3>
+          <h3><a class="hover-effect" href="http://almaobservatory.org/en/press-room/announcements-events/658-chilean-astroinformatics-platform-joins-international-virtual-observatory">Chilean <!--astroinformatics platform--> joins International Virtual Observatory</a></h3>
+          <p>The project designed to manage and analyze the almost 250 terabytes of data that the Atacama Millimeter/submillimeter Array (ALMA) will generate each year has joined the International Virtual Observatory Alliance, becoming a key initiative in Chile's contribution to astroinformatics around the world...</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 col-sm-6">
+      <div class="thumbnails thumbnail-style thumbnail-kenburn">
+        <div class="thumbnail-img">
+          <div class="overflow-hidden">
+            <%= image_tag "news_1.jpg", class: 'img-responsive' %>
+          </div>
+          <a class="btn-more hover-effect" href="http://www.almaobservatory.org/en/press-room/announcements-events/542-virtual-observatories-chilean-development-of-astronomical-computing-for-alma">read more +</a>     
+        </div>
+        <div class="caption">
+          <h3><a class="hover-effect" href="http://www.almaobservatory.org/en/press-room/announcements-events/542-virtual-observatories-chilean-development-of-astronomical-computing-for-alma">Chilean Development of Astronomical Computing for ALMA</a></h3>
           <p>Once the Atacama Large Millimiter/submillimeter Array (ALMA) is functioning at full capacity, it will generate more than 750 GB of data each day (on the order of 250 TB/year). Chilean astronomers will need to be able to connect at a high data transmission speed...</p>
         </div>
       </div>
