--- a/app/views/home/institutions.html.erb
+++ b/app/views/home/institutions.html.erb
@@ -33,17 +33,16 @@
         <h2>Sennior Personnel</h2>
       </div>
       <ul>
-        <li>Mauricio Solar Fuentes, Managing Director</li>
-        <li>Marcelo Mendoza Rocha, Alternate Director</li>
-        <li>Victor Parada Daza, Principal Researcher</li>
-        <li>Diego Mardones Pérez, Principal Researcher</li>
-        <li>Karim Pichara Baksai, Principal Researcher</li>
-        <li>Luis Contreras Arriagada, Principal Researcher</li>
-        <li>Gerardo Rivas Perlwitz, Technology Transfer Professional</li>
+        <li>Mauricio Solar, Director</li>
+        <li>Marcelo Mendoza, Alternate Director</li>
+        <li>Victor Parada, Principal Researcher</li>
+        <li>Diego Mardones, Principal Researcher</li>
+        <li>Karim Pichara, Principal Researcher</li>
+        <li>Luis Contreras, Principal Researcher</li>
+        <li>Neil Nagar, Principal Researcher</li>
         <li>Nelson Padilla, Principal Researcher</li>
         <li>Guillermo Cabrera Vives, Research Assistant</li>
         <li>Paola Arellano Toro, Board Member</li>
-        <li>Neil Nagar, Principal Researcher - Scientific and technical Professional</li>
         <li>Jorge Ibsen Fuentes, Board Member</li>
         <li>Lars-ake Nyman, Board Member</li>
         <li>Eduardo Vera Sobrino, Board Member</li>
