--- a/app/views/query/conesearch.html.erb
+++ b/app/views/query/conesearch.html.erb
@@ -1,22 +1,6 @@
 <%= javascript_include_tag "voview" %>
 <%= stylesheet_link_tag  "voview", media: "all" %>
 
-<script type="text/javascript">//<![CDATA[
-  /**
-    Make a new VOView object.  The form containing the input information is 
-    specified, as well as the widgetID, which is used below to indicate where 
-    in the page the VOView display will be placed.
-  **/
-	myVoview =  new voview({input: {form: "searchForm"}, widgetID: "voviewTab"});
-  /**
-    Uncomment the line below to show an example of reformatting a column.  This
-    example really only works with the example_input.xml file.
-  **/
-	// myVoview.renderObject.columnFormat("name", "<a onclick=\"return nw(this.href, this.target)\" href=\"http://simbad.u-strasbg.fr/sim-id.pl?protcol=html&Ident=@@&Frame3=G\" title=\"Link to Simbad details\">@@</a>");
-	myVoview.renderObject.enableRowSelection();
-  //]]>
-</script>
-
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-40">
   <div class="container">
@@ -34,7 +18,9 @@
 <div class="container">   
   <div class="row margin-bottom-30">
   	<div class="col-md-6 md-margin-bottom-40 col-md-offset-3">
-	  	<%= form_tag "", class: 'form-horizontal', role: 'form', method: 'get', name: 'searchForm', onsubmit: 'return myVoview.start()' do %>
+
+	  	<%= form_tag "/query/conesearch",remote: true, class: 'form-horizontal', role: 'form', method: 'get', name: 'searchForm' do %>
+		
 			  <div class="form-group">
 			  	<%= label_tag :ra, 'RA', class: 'col-sm-2 control-label' %>
 			    <div class="col-sm-8">
