Refactoring the query controller.

--- a/app/views/query/conesearch.html.erb
+++ b/app/views/query/conesearch.html.erb
@@ -34,9 +34,9 @@
 			    </div>
 			  </div>
 				<div class="form-group">
-			  	<%= label_tag :radius, 'Radius (SR)', class: 'col-sm-2 control-label' %>
+			  	<%= label_tag :sr, 'Radius (SR)', class: 'col-sm-2 control-label' %>
 			    <div class="col-sm-8">
-			    	<%= text_field_tag :radius, nil, class: 'form-control' %>
+			    	<%= text_field_tag :sr, nil, class: 'form-control' %>
 			    </div>
 			  </div>
 			  <div class="form-group">
