--- a/app/views/query/imagesearch.html.erb
+++ b/app/views/query/imagesearch.html.erb
@@ -1,22 +1,6 @@
 <%= javascript_include_tag "voview" %>
 <%= stylesheet_link_tag  "voview", media: "all" %>
 
-<script type="text/javascript">//<![CDATA[
-  /**
-    Make a new VOView object.  The form containing the input information is 
-    specified, as well as the widgetID, which is used below to indicate where 
-    in the page the VOView display will be placed.
-  **/
-  myVoview =  new voview({input: {form: "searchForm"}, widgetID: "voviewTab"});
-  /**
-    Uncomment the line below to show an example of reformatting a column.  This
-    example really only works with the example_input.xml file.
-  **/
-  // myVoview.renderObject.columnFormat("name", "<a onclick=\"return nw(this.href, this.target)\" href=\"http://simbad.u-strasbg.fr/sim-id.pl?protcol=html&Ident=@@&Frame3=G\" title=\"Link to Simbad details\">@@</a>");
-  myVoview.renderObject.enableRowSelection();
-  //]]>
-</script>
-
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-40">
   <div class="container">
@@ -33,7 +17,7 @@
 <div class="container">   
   <div class="row margin-bottom-30">
     <div class="col-md-6 md-margin-bottom-40 col-md-offset-3">
-      <%= form_tag "", class: 'form-horizontal', role: 'form', method: 'get', name: 'searchForm', onsubmit: 'return myVoview.start()' do %>
+      <%= form_tag "/query/imagesearch", class: 'form-horizontal', role: 'form', method: 'get', name: 'searchForm', remote: true do %>
         <div class="form-group">
           <%= label_tag :ra, 'RA', class: 'col-sm-2 control-label' %>
           <div class="col-sm-8">
@@ -49,22 +33,21 @@
         </div>
 
         <div class="form-group">
-          <%= label_tag :angular, 'Angular Size', class: 'col-sm-2 control-label'%>
+          <%= label_tag :size, 'Angular Size', class: 'col-sm-2 control-label'%>
           <div class="col-sm-8">
-            <%= text_field_tag :angular, nil, class: 'form-control' %>
+            <%= text_field_tag :size, nil, class: 'form-control' %>
           </div>
         </div>
 
         <div class="form-group">
-          <%= label_tag :angular, 'Data type', class: 'col-sm-2 control-label'%>
+          <%= label_tag :formato, 'Data type', class: 'col-sm-2 control-label'%>
           <div class="col-sm-8">
-            <%= select_tag :format, options_for_select(["FITS", "VOTable", "JPG"]), class: 'form-control'%>
+            <%= select_tag "formato", options_for_select([ "FITS", "VOTable", "JPG" ], "FITS"), class: 'form-control' %>
           </div>
         </div>
-        <%= hidden_field_tag :sterm, "http://localhost:3000/example_input.xml", name: 'query_string' %>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <%= button_tag(type: 'submit', class: "btn btn-default") do %> Search <% end %>
+            <%= submit_tag 'Process', class: 'btn btn-default' %>
           </div>
         </div>
       <% end %>
