--- a/app/views/query/spectralsearch.html.erb
+++ b/app/views/query/spectralsearch.html.erb
@@ -34,7 +34,8 @@
 <div class="container">   
   <div class="row margin-bottom-30">
   	<div class="col-md-6 md-margin-bottom-40 col-md-offset-3">
-	  	<%= form_tag "", class: 'form-horizontal', role: 'form', method: 'get', name: 'searchForm', onsubmit: 'return myVoview.start()' do %>
+		
+	  	<%= form_tag "/query/spectralsearch", remote: true, class: 'form-horizontal', role: 'form', name: 'searchForm' do %>
 			  <div class="form-group">
 			  	<%= label_tag :ra, 'RA', class: 'col-sm-2 control-label' %>
 			    <div class="col-sm-8">
@@ -53,16 +54,17 @@
 			    	<%= text_field_tag :diameter, nil, class: 'form-control' %>
 			    </div>
 			  </div>
+			  
 			  <div class="form-group">
-			  	<%= label_tag :format, 'Format', class: 'col-sm-2 control-label' %>
+			  	<%= label_tag :formato, 'Format', class: 'col-sm-2 control-label' %>
 			    <div class="col-sm-8">
-			    	<%= select_tag :format, options_for_select(["FITS", "VOTable", "JPG", "Native", "Graphic"]), class: 'form-control' %>
+			    	<%= select_tag :formato, options_for_select(["FITS", "VOTable", "JPG", "Native", "Graphic"]), class: 'form-control' %>
 			    </div>
-			  </div>
-			  <%= hidden_field_tag :sterm, "http://localhost:3000/example_input.xml", name: 'query_string' %>
+		    </div>
+
 			  <div class="form-group">
 			    <div class="col-sm-offset-2 col-sm-10">
-			      <button type="submit" class="btn btn-default" name="_submit">Process</button>
+					<%= submit_tag 'Process', class: 'btn btn-default' %>
 			    </div>
 			  </div>
 			<% end %>
