--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,20 +71,20 @@
               Services
               <%= fa_icon 'angle-down' %>
             </a>
-            <ul class="dropdown-menu">
+            <!-- <ul class="dropdown-menu">
               <li>
-                <%= link_to 'Cone Search', query_conesearch_path %>
+                <%#= link_to 'Cone Search', query_conesearch_path %>
               </li>
               <li>
-                <%= link_to 'Image Search', query_imagesearch_path %>
+                <%#= link_to 'Image Search', query_imagesearch_path %>
               </li>
               <li>
-                <%= link_to 'Spectral Search', query_spectralsearch_path %>
+                <%#= link_to 'Spectral Search', query_spectralsearch_path %>
               </li>
               <li>
-                <%= link_to 'Table Search', query_tablesearch_path %>
+                <%#= link_to 'Table Search', query_tablesearch_path %>
               </li>
-            </ul>
+            </ul> -->
           </li>
           <li class="dropdown <%= 'active' if controller.controller_name == 'home' and controller.action_name == 'about' %>">
             <%= link_to 'About Us', about_path %>
