Fixing some divs.

--- a/app/views/home/workshop-program.html.erb
+++ b/app/views/home/workshop-program.html.erb
@@ -14,14 +14,14 @@
 <div class="container">   
   <div class="row margin-bottom-30">
     <div class="col-md-10 md-margin-bottom-40">
-    Este Workshop es organizado por la Universidad Técnica Federico Santa María, Pontificia Universidad Católica de Chile, Universidad de Chile, Universidad de Santiago, y la Universidad de Concepción, junto con Atacama Large Millimeter/submillimeter Array (ALMA) y Red Universitaria Nacional (REUNA). <br><br>
+      <p>Este Workshop es organizado por la Universidad Técnica Federico Santa María, Pontificia Universidad Católica de Chile, Universidad de Chile, Universidad de Santiago, y la Universidad de Concepción, junto con Atacama Large Millimeter/submillimeter Array (ALMA) y Red Universitaria Nacional (REUNA).</p>
 
-    A realizarse el próximo 10 de enero 2013, en las Oficinas centrales de ALMA Santiago (Salón Licancabur), Alonso de Cordova 3107, Vitacura, Santiago de Chile. <br><br>
+      <p>A realizarse el próximo 10 de enero 2013, en las Oficinas centrales de ALMA Santiago (Salón Licancabur), Alonso de Cordova 3107, Vitacura, Santiago de Chile.</p>
 
-    Debido a la capacidad del recinto, los cupos serán limitados y se requiere inscripción. Posterior se confirmará su registro. <br><br>
+      <p>Debido a la capacidad del recinto, los cupos serán limitados y se requiere inscripción. Posterior se confirmará su registro.</p>
 
-    La inscripción se debe realizar en el siguiente link:<a href="http://bit.ly/1dKJQje"><li class="active">Workshop Registration</li></a> <br><br><br>
-    <table class="table table-striped">
+      <p>La inscripción se debe realizar en el siguiente link:<a href="http://bit.ly/1dKJQje"><li class="active">Workshop Registration</li></a> </p>
+      <table class="table table-striped">
         <thead><tr><th>Time</th><th>Title</th><th>Speaker</th></tr></thead>
         <tbody>
           <tr><td>10:00 - 10:30</td><td>Proyecto FONDEF: Astroinformática</td><td>Mauricio Solar</td></tr>
@@ -33,5 +33,6 @@
           <tr><td>16:00 - 16:30</td><td>TBD</td><td>Juande Santander</td></tr>
         </tbody>
       </table>
-  </div><!--/row-->
+    </div><!--/row-->
+  </div>
 </div>
