workshop-program modifications

--- a/app/views/home/workshop-program.html.erb
+++ b/app/views/home/workshop-program.html.erb
@@ -26,10 +26,10 @@
         <tbody>
           <tr><td>10:00 - 10:30</td><td>Proyecto FONDEF: Astroinformática</td><td>Mauricio Solar</td></tr>
           <tr><td>10:30 - 11:00</td><td>What is IVOA?</td><td>David Schade</td></tr>
-          <tr><td>11:00 - 11:30</td><td>ChiVO</td><td>Jonathan Antognini</td></tr>
-          <tr><td>12:00 - 12:30</td><td>IVOA Standards</td><td>Severin Gaudet</td></tr>
+          <tr><td>11:00 - 11:30</td><td>IVOA Standards</td><td>Severin Gaudet</td></tr>
+          <tr><td>12:00 - 12:30</td><td>ChiVO</td><td>Jonathan Antognini</td></tr>
           <tr><td>14:00 - 14:30</td><td>ALMA</td><td>Jorge Ibsen</td></tr>
-          <tr><td>15:00 - 15:30</td><td>Problemas en radioastronomía</td><td>Mauricio Solar</td></tr>
+          <tr><td>15:00 - 15:30</td><td>Problemas en radioastronomía</td><td>Diego Mardones</td></tr>
           <tr><td>16:00 - 16:30</td><td>TBD</td><td>Juande Santander</td></tr>
         </tbody>
       </table>
