Juande presentation title

--- a/app/views/home/workshop-program.html.erb
+++ b/app/views/home/workshop-program.html.erb
@@ -30,7 +30,7 @@
           <tr><td>12:00 - 12:30</td><td>ChiVO</td><td>Jonathan Antognini</td></tr>
           <tr><td>14:00 - 14:30</td><td>ALMA</td><td>Jorge Ibsen</td></tr>
           <tr><td>15:00 - 15:30</td><td>Problemas en radioastronomía</td><td>Diego Mardones</td></tr>
-          <tr><td>16:00 - 16:30</td><td>TBD</td><td>Juande Santander</td></tr>
+          <tr><td>16:00 - 16:30</td><td>Building a National Virtual Observatory: the case of the Spanish Virtual Observatory</td><td>Juande Santander</td></tr>
         </tbody>
       </table>
     </div><!--/row-->
