--- a/app/views/home/workshop-program.html.erb
+++ b/app/views/home/workshop-program.html.erb
@@ -24,13 +24,15 @@
       <table class="table table-striped">
         <thead><tr><th>Time</th><th>Title</th><th>Speaker</th></tr></thead>
         <tbody>
-          <tr><td>10:00 - 10:30</td><td>Proyecto FONDEF: Astroinformática</td><td>Mauricio Solar</td></tr>
+          <tr><td>10:00 - 10:15</td><td>Welcome</td><td>Jorge Ibsen</td></tr>
+          <tr><td>10:15 - 10:30</td><td>FONDEF Project: Astroinformatics</td><td>Mauricio Solar</td></tr>
           <tr><td>10:30 - 11:00</td><td>What is IVOA?</td><td>David Schade</td></tr>
           <tr><td>11:00 - 11:30</td><td>IVOA Standards</td><td>Severin Gaudet</td></tr>
-          <tr><td>12:00 - 12:30</td><td>ChiVO</td><td>Jonathan Antognini</td></tr>
-          <tr><td>14:00 - 14:30</td><td>ALMA</td><td>Jorge Ibsen</td></tr>
-          <tr><td>15:00 - 15:30</td><td>Problemas en radioastronomía</td><td>Diego Mardones</td></tr>
-          <tr><td>16:00 - 16:30</td><td>Building a National Virtual Observatory: the case of the Spanish Virtual Observatory</td><td>Juande Santander</td></tr>
+          <tr><td>12:00 - 12:15</td><td>ChiVO</td><td>Jonathan Antognini</td></tr>
+          <tr><td>12:15 - 13:30</td><td>Lunch</td><td></td></tr>
+          <tr><td>13:30 - 14:00</td><td>ALMA an VO</td><td>Jorge Ibsen</td></tr>
+          <tr><td>14:00 - 14:30</td><td>VO science cases with ALMA</td><td>Diego Mardones</td></tr>
+          <tr><td>14:30 - 15:00</td><td>Building a National Virtual Observatory: the case of the Spanish Virtual Observatory</td><td>Juan de Dios Santander</td></tr>
         </tbody>
       </table>
     </div><!--/row-->
