--- a/app/assets/stylesheets/query.css.scss
+++ b/app/assets/stylesheets/query.css.scss
@@ -3,16 +3,18 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.form-control.form-control-small{
-	width: 35%;
+.popbox {
+	display: none;
+    position: absolute;
+    z-index: 99999999;
+    width: 200px;
+    padding: 10px;
+    margin-left: 0px;
+    box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
 }
 
-.form-control.form-control-medium{
-	width: 70%;
-}
-
-.form-control.form-control-large{
-	width: 100%;
+.panel-title > a {
+	float: right;
 }
 
 
