wrong text resolved

--- a/app/views/form_option/alma.html.erb
+++ b/app/views/form_option/alma.html.erb
@@ -51,7 +51,7 @@
 									</span>
 								</th>		
 				  			</tr>	
-						</thead>container-input
+						</thead>
 						<tbody>
 							<tr>
 								<td class="tag-box tag-box-v6 col-sm-3" >
