Link to Ivoa added

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,4 +10,5 @@
 @import "blue";
 @import "headers/header1-blue";
 @import "query";
-@import "form_option"
+@import "form_option";
+@import "home";
