--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -128,6 +128,9 @@
   </ul>
   </div><!--/flexslider-->
   <!-- End Our Clients -->
+  <img id="links">
+    <%= link_to image_tag("ivoa_logoc.png", :class => "ivoa"),"http://www.ivoa.net/about/member-contacts.html", :target => "_blank" %>
+  </img>
 </div><!--/container-->   
 <!-- End Content Part -->
 
