Fixed link to ivoa, added the meaning of CHIVO next to the logo and reordered the institution member list

--- a/app/assets/stylesheets/_app.css.scss
+++ b/app/assets/stylesheets/_app.css.scss
@@ -884,3 +884,8 @@ i.style-switcher-btn-option:hover {
 .style-switcher li.theme-light {
    background: #ecf0f1;
 }
+.chivo-title {
+   position: relative;
+   top:10px;   
+
+}
