--- a/app/views/home/institutions.html.erb
+++ b/app/views/home/institutions.html.erb
@@ -32,6 +32,7 @@
       <div class="headline">
         <h2>Sennior Personnel</h2>
       </div>
+      <h3 class="list-heading">Researchers</h3>
       <ul>
         <li>Mauricio Solar, Director</li>
         <li>Marcelo Mendoza, Alternate Director</li>
@@ -43,6 +44,7 @@
         <li>Nelson Padilla, Principal Researcher</li>
         <li>Guillermo Cabrera Vives, Research Assistant</li>
       </ul>
+      <h3 class="list-heading">Board's Members</h3>
       <ul>
         <li>Paola Arellano Toro, Board Member</li>
         <li>Jorge Ibsen Fuentes, Board Member</li>
