--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,8 +72,9 @@
           <span class="icon-bar"></span>
         </button>
         <%= link_to image_tag("logo1-default.png", width: '130px'), root_path, class: 'navbar-brand' %>
+      
       </div>
-
+      <h4 class="chivo-title navbar-header">Chilean Virtual Observatory</h4>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav navbar-right">
