Ivoa's img position corrected

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,9 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .ivoa {
-   position:relative;
-   left:1000px;
-   bottom:150px;
+  position:relative;
+   left:60px;
+   top:10px;
 	}
 
 .list-heading{
