--- a/app/views/form_option/option1.html.erb
+++ b/app/views/form_option/option1.html.erb
@@ -16,7 +16,7 @@
 </div><!--/breadcrumbs-->
 <!--=== End Breadcrumbs ===-->
 
-<%= render 'pop_boxes' %>
+<%= render 'form_option/other_options/pop_boxes' %>
 
 <!--=== Content Part ===-->
 <div class="container">   
@@ -32,7 +32,7 @@
 			<!--=== Panel ===-->
 	  		<div  class="panel panel-default margin-bottom-40">
 	    		
-	    		<%= render 'panel_heading' %>
+	    		<%= render 'form_option/other_options/panel_heading' %>
 
 	  			<div class="panel-body">
 		  			
@@ -172,7 +172,7 @@
 			</div> <!--=== End Panel ===-->
 		</div>
   	</div>
-  	<%= render 'settings' %>
+  	<%= render 'form_option/other_options/settings' %>
 </div>
 
 <br><br><br><br><br><br><br>
