--- a/app/views/form_option/alma.html.erb
+++ b/app/views/form_option/alma.html.erb
@@ -21,19 +21,17 @@
 			<li><a href="#result_table" data-toggle="tab">Result Table</a></li>               
 		</ul>
 		<div class="tab-content">
-
 			<div class="tab-pane active" id="query_form" >
 				<%= render 'query_form' %>
-            </div>
-
-            <div class="tab-pane" id="query_list">
-                <%= render 'query_list' %>
-            </div>   
-            <div class="tab-pane" id="result_table">
-            	<%= render 'query_list' %>
-            </div>
-        </div>
+      </div>
+      <div class="tab-pane" id="query_list">
+          <%= render 'query_list' %>
+      </div>   
+      <div class="tab-pane" id="result_table">
+      	<%= render 'result_table' %>
+      </div>
     </div>
+  </div>
 </div> <!--== End Content Part ==-->
 <!--=== Form ===-->
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
