add a form to use the controller

--- a/app/views/form_option/_query_list.html.erb
+++ b/app/views/form_option/_query_list.html.erb
@@ -1,12 +1,19 @@
-<table id= "query_list" class="table">
-	<thead>
-		<tr>
-			<th>Sesame Name</th>
-			<th>Ra Dec</th>
-			<th>Search Radius</th>
-			<th>Status</th>
-		</tr>
-	</thead>
-	<tbody>
-	</tbody>
-</table>
+<br>
+<%= form_tag "/form_option/alma", remote: true, class: 'form-horizontal', role: 'form', method: 'get'  do %>
+	<%= submit_tag 'Process Selected', class: 'btn btn-default ', style: "display:inline-block" %>
+	<br>
+	<table id= "query_list_table" class="table">
+		<thead>
+			<tr>
+				<th>Select</th>
+				<th>Sesame Name</th>
+				<th>Ra Dec</th>
+				<th>Search Radius</th>
+				<th>Resource</th>
+				<th>Action</th>	
+			</tr>
+		</thead>
+		<tbody>
+		</tbody>
+	</table>
+<% end %>
