--- a/app/assets/stylesheets/form_option.css.scss
+++ b/app/assets/stylesheets/form_option.css.scss
@@ -78,7 +78,7 @@ table#table_query {
     }
 }
 
-.multiselect-scan-intent, .multiselect-polarisation-type, .multiselect-band {
+.multiselect-scan-intent, .multiselect-polarisation-type, .multiselect-band, {
     display: none;
     position: relative;
 
@@ -126,3 +126,70 @@ table#table_query {
     }
 }
 /* end alma */
+.multiselect-resource {
+    position: relative;
+
+    > button {
+        cursor: default;
+        height: auto;
+
+        > i {
+            float: right;
+        }
+    }
+    > div {
+        padding-top: 3px;
+        > ul {
+            width: 100%;
+            display: none;
+            background-color: white;
+            border: #ccc 1px solid;
+            padding: 0px;
+            list-style: none;
+            padding: 0px;
+            position: absolute;
+            z-index:1;
+
+            li {
+                input[type=checkbox] {
+                    margin-left: 20px;
+                    margin-right: 30px;
+                }
+
+                label {
+                    margin: 3px;
+                    width: 100%;
+
+                    &:hover {
+                        border-color: #66afe9;
+                        -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+                    }
+                }
+            }        
+            .dropdown-header {
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+#query_list {
+    .selected_td {
+        width: 50px;
+    }
+    .sesame_td {
+        width:80px;
+    }
+    .ra_dec_td {
+        width:150px;
+    }
+    .search_td{
+        width:100px;
+    }
+    .resource_td{
+        width:100px;
+    }
+    .action_td{
+        width:50px;
+    }
+}
